# vocab-app

./: .gitignore  README.md  config.py  dataloaders.py  evalset.py  ideas.txt  lstmnetwork.py  main.py  memoryhandler.py  model.pt  modeltrainer.py  pyproject.toml  recall.py  showingorder.py  test.py  trainset.py  vocabularyloader.py
create worldlists/: firstcolumn.txt  french.txt  italian.txt  russian.txt  secondcolumn.txt  spanish.txt  ttt.py
models/: french.pt  spanish.pt
records/: french.json  italian.json  russian.json  spanish.json
src/: main.py  paths.py  predict.py  settings.py
src/database/: __init__.py  base.py  database.py  inspect.py  models.py  repository.py  session.py
src/database/models/: __init__.py  base.py  direction.py  language_pair.py  repetition.py  word.py
src/database/repositories/: __init__.py  base.py  language_pair.py  repetition.py  word.py
src/gui/: __init__.py  app.py  background.py  base_screen.py  db_context.py  db_select.py  db_select_util.py  formatting.py  practice_screen.py  settings_screen.py  theme.py  train_dialog.py  train_screen.py  widgets.py  word_detail.py  word_edit.py  word_list.py
src/gui/dialogs/: __init__.py  base.py  word_edit.py
src/gui/practice/: __init__.py  queue_model.py  state.py  view.py  workers.py
src/model/: __init__.py  __main__.py  checkpoint.py  config.py  curve.py  dataset.py  device.py  lstm.py  predictor.py  schedule.py  train.py
storage/: settings.json
storage/models/: french_polish.pt
wordlists/: french.xlsx  italian.xlsx  russian.xlsx  spanish.xlsx  ~$french.xlsx
(+17 files in other folders)
