[project]
name = "vocab-repetition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "openpyxl>=3.1",
    "customtkinter>=5.2.2",
    "torch>=2.12.0",
    "matplotlib>=3.10.9",
    "optuna>=4.8.0",
    "sentence-transformers>=5.5.1",
    "scikit-learn>=1.8.0",
]
